started week 6 assignment
