# server.js
@@ -17,8 +17,8 @@ app
         resave: false ,
         saveUninitialized: true ,
     }))
-    //.use(passport.initialize())
-    //.use(passport.session())
+    .use(passport.initialize())
+    .use(passport.session())
     .use((req, res, next) => {
         res.setHeader("Access-Control-Allow-Origin", "*");
         res.setHeader(
@@ -36,33 +36,33 @@ app
     .use("/", require("./routes/index.js"));
 
 
-// passport.use(new GitHubStrategy({
-//     clientID: process.env.GITHUB_CLIENT_ID,
-//     clientSecret: process.env.GITHUB_CLIENT_SECRET,
-//     callbackURL: process.env.CALLBACK_URL
-// },
-// function(accessToken, refreshToken, profile, done) {
-//     //User.findOrCreate({githubId: profile.id }, function (err, userId) {
-//     return done(null, profile);
-//     //});
-// }
-// ));    
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+    //User.findOrCreate({githubId: profile.id }, function (err, userId) {
+    return done(null, profile);
+    //});
+}
+));    
 
-// passport.serializeUser((user, done) => {
-//     done(null, user);
-// });
-// passport.deserializeUser((user, done) => {
-//     done(null, user);
-// });
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
 
 app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
 
-// app.get('/github/callback', passport.authenticate('github', {
-//     failureRedirect: '/api-docs', session: false}),
-// (req, res) => {
-//     req.session.user = req.user;
-//     res.redirect('/');
-// });
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false}),
+(req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 mongodb.initdDb((err) => {
     if(err) {
